# rehab

./: .gitignore  AGENTS.md  AGENT_NOTES.md  CLAUDE.md  MAP.md  README.md  SESSION_PROMPT.md  compaction.sh  pyproject.toml
.agent/: compaction.sh  context.sh  memory.md  roadmap.md
.claude/: settings.json
.claude/commands/: codex-review.md  session-prompt.md  session.md
.claude/hooks/: auto-commit.sh
.serena/: project.yml
models/: conversion_metrics.json  dataquality_summary.json  dissociation_metrics.json  independence_metrics.json  landmark_metrics.json  level_descent_metrics.json  multistate_metrics.json  phenotype_metrics.json  simulator_defaults.json  subgroups.json  temporal_metrics.json  topography_metrics.json  training_metrics.json
schema/: categorical_levels.yaml  columns.yaml  isncsci.yaml  scim_iii.yaml  ui_strings.yaml
scripts/: 01_profile_raw.py  gen_map.py
src/rehab_sci/: constants.py  schema.py
src/rehab_sci/dashboard/: app.py  compute.py  figures.py  i18n.py  layout.py  reliability.py  report.py  state.py  theme.py
src/rehab_sci/dashboard/assets/: style.css
src/rehab_sci/dashboard/figures/: __init__.py  _common.py  insights.py  methods.py  overview.py  patient.py  simulator.py
src/rehab_sci/dashboard/tabs/: insights.py  methods.py  overview.py  patient.py  simulator.py
src/rehab_sci/data/: archetypes.py  dataset.py  episodes.py  loader.py  phenotypes.py  quality.py  similarity.py
src/rehab_sci/models/: archetypes.py  conformal.py  conversion.py  dissociation.py  independence.py  landmark.py  level_descent.py  multistate.py  outcomes.py  phenotypes.py  shap_utils.py  subgroups.py  temporal.py  topography.py  train.py
tests/: conftest.py  test_behavioral.py  test_dashboard_smoke.py  test_data_invariants.py  test_model_invariants.py
