[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rehab-sci"
version = "0.1.0"
description = "Bilingual (JA/EN) rehabilitation analytics & prediction suite for spinal cord injury (SCI) data."
requires-python = ">=3.12,<3.14"
dependencies = [
  # core data
  "pandas>=2.2,<4",
  "polars>=1.20,<2",
  "numpy>=2.0,<3",
  "pyarrow>=23.0.1,<25",
  # stats
  "scipy>=1.13,<2",
  "statsmodels>=0.14,<0.16",
  "pingouin>=0.5,<0.7",
  # ML
  "scikit-learn>=1.5,<2",
  "lightgbm>=4.5,<5",
  "shap>=0.46,<0.52",
  "numba>=0.61",
  "llvmlite>=0.44",
  # plotting / dashboard
  "plotly>=5.24,<7",
  "dash>=2.18,<5",
  "dash-bootstrap-components>=1.6,<3",
  # utility
  "joblib>=1.4,<2",
  "pyyaml>=6.0,<7",
  "tqdm>=4.66,<5",
  "rich>=13,<16",
  "kaleido>=1.0,<2",
  "fpdf2>=2.8,<3",
]

[dependency-groups]
dev = [
  "ruff>=0.6,<1",
  "ipython>=8.20,<10",
  "jupyterlab>=4.2,<5",
  "pip-audit>=2.10.0",
  "pytest>=8,<9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF001/002/003: ambiguous-unicode — false positives on the bilingual UI's
# intentional JA text + scientific typography (en-dash ranges, ×, σ, thin-space).
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
# F26 invariant harness. Suite is a no-op (all skips) when the gitignored raw
# CSV / model bundles are absent — see tests/conftest.py skip gates.
testpaths = ["tests"]
addopts = "-q -ra"

[tool.hatch.build.targets.wheel]
packages = ["src/rehab_sci"]
